return value of code

--- a/lmp.org
+++ b/lmp.org
@@ -26,7 +26,7 @@ $$\begin{align*}
 A quick example in Julia is given below.
 
 
-#+begin_src julia :results output
+#+begin_src julia :results value
 using JuMP, GLPK, LinearAlgebra
 a1 = -1;
 b1 = 0;
@@ -41,30 +41,9 @@ model = Model(GLPK.Optimizer);
 @objective(model, Max, r)
 optimize!(model)
 
-
-value(xc)
-value(r)
+return [value(xc); values(r)]
 #+end_src
 
 #+RESULTS:
-#+begin_example
--1
-0
-2.2
-4.5
-A JuMP Model
-Feasibility problem with:
-Variables: 0
-Model mode: AUTOMATIC
-CachingOptimizer state: EMPTY_OPTIMIZER
-Solver name: GLPK
-xc
-r
-hs1 : -xc + r ≤ 0.0
-hs2 : 2.2 xc + 2.2 r ≤ 4.5
-r
-1.0227272727272727
-1.0227272727272727
-#+end_example
 
 * Quadratic programming
